
<resources>

    <string name="app_name">Ma réu</string>
    <string name="CreationActivityName">Creation</string>
    <string name="FilterActivityName">Filter</string>

    <!-- XML file -->

        <!-- item_[...].xml -->
        <string name="text_topic_hour_room">Meeting A - 15h00 - Mario</string>
        <string name="text_participant_mail">perso@hotmail.fr</string>
        <string name="first_and_last_names">Yann Mancel</string>

        <!-- menu_activity_main.xml -->
        <string name="filter">Filter</string>
        <string name="filter_hour">Filter per hour</string>
        <string name="filter_room">Filter per room</string>

        <!-- fragment_creator_of_meeting.xml -->
        <string name="hour_of_meeting">Hour:</string>
        <string name="room_of_meeting">Room:</string>
        <string name="topic_of_meeting">Topic:</string>
        <string name="member">Member:</string>
        <string name="name_text_input_edit_text">Name</string>
        <string name="error_text_input_layout">Field cannot be empty</string>

        <!-- fragment_meeting.xml -->
        <string name="no_data">No data</string>

        <!-- fragment_filter_hours.xml -->
        <string name="select_a_range_of_hours">Select a range of hours:</string>
        <string name="start_hour">Start:</string>
        <string name="end_hour">End:</string>
        <string name="initial_hour_of_text_view">08:00</string>
        <string name="final_hour_of_text_view">20:00</string>
        <string name="filter_by_hours">FILTER BY HOURS</string>

        <!-- fragment_filter_room.xml -->
        <string name="select_a_room_for_the_filter">Select a room for the filter:</string>
        <string name="filter_by_room">FILTER BY ROOM</string>

    <!-- JAVA file -->

        <string name="no">No</string>
        <string name="yes">Yes</string>
        <string name="cancel">Cancel</string>

        <!-- MeetingFragment.java -->
        <string name="information_delete_meeting">Delete of meeting: %s</string>

        <!-- MainActivity.java -->
        <string name="none_of_choice_validated">None of choice validated</string>
        <string name="information_creation_of_meeting">Creation of meeting: %s</string>

        <!-- CreationActivity.java -->
        <string name="creation_of_meeting">Creation of meeting</string>
        <string name="question_for_creation_of_meeting">Are you sure to create this meeting?\n(%s)</string>
        <string name="error_topic_meeting_creation">Error: No topic</string>
        <string name="error_member_meeting_creation">Error: No member</string>

        <!-- FilterActivity.java -->
        <string name="creation_of_hours_filter">Creation of hours filter</string>
        <string name="question_for_creation_of_hours_filter">Are you sure to create this filter?\n(From %s to %s)</string>
        <string name="creation_of_room_filter">Creation of room filter</string>
        <string name="question_for_creation_of_room_filter">Are you sure to create this filter?\n(%s)</string>

</resources>
