...
                app:hintEnabled="false"
                app:errorEnabled="true">

                <!-- TEXT INPUT EDIT TEXT -->

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_creator_of_meeting_tiet_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_text_input_edit_text"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>
...
                android:id="@+id/fragment_creator_of_meeting_tv_hour_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_creator_of_meeting_b_hour"
                app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creator_of_meeting"
                android:text="@string/hour_of_meeting" />

            <!-- BUTTON -->

            <Button
...
                android:id="@+id/fragment_creator_of_meeting_tv_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_creator_of_meeting_spinner_room"
                app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creator_of_meeting"
                android:text="@string/room_of_meeting" />

            <!-- SPINNER -->

            <Spinner
...
                android:paddingBottom="@dimen/padding_normal"
                android:text="@string/member" />

            <!-- RECYCLER VIEW -->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragment_creator_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_creator_of_meeting_tv_member"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...

    </android.support.constraint.ConstraintLayout>

    <!-- FAB -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_creator_of_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_add_white_24dp"
        android:tint="@android:color/white"
...
