<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HoursFilterFragment">

    <!-- TEXT VIEW -->

    <TextView
        android:id="@+id/fragment_filter_hours_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select_a_range_of_hours"
        style="@style/Title" />

    <!-- BLOC: MINIMAL HOUR ******************************************************************** -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_filter_hours_cl_minimal_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/fragment_filter_hours_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_filter_hours_tv_minimal_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_filter_hours_b_minimal_hour"
            app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creator_of_meeting"
            android:text="@string/start_hour" />

        <!-- BUTTON -->

        <Button
            android:id="@+id/fragment_filter_hours_b_minimal_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_filter_hours_tv_minimal_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="@integer/value_2_percentage_horizontal_creator_of_meeting"
            android:text="@string/initial_hour_of_text_view"
            style="@style/BasicButton" />

    </android.support.constraint.ConstraintLayout>

    <!-- BLOC: MAXIMAL HOUR ******************************************************************** -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_filter_hours_cl_maximal_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/fragment_filter_hours_cl_minimal_hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_filter_hours_tv_maximal_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_filter_hours_b_maximal_hour"
            app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creator_of_meeting"
            android:text="@string/end_hour" />

        <!-- BUTTON -->

        <Button
            android:id="@+id/fragment_filter_hours_b_maximal_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_filter_hours_tv_maximal_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="@integer/value_2_percentage_horizontal_creator_of_meeting"
            android:text="@string/final_hour_of_text_view"
            style="@style/BasicButton" />

    </android.support.constraint.ConstraintLayout>

    <!-- BUTTON -->

    <Button
        android:id="@+id/fragment_filter_hours_b_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/filter_by_hours"
        style="@style/FilledButton" />

</android.support.constraint.ConstraintLayout>